tests/extensions/structs/valid/structAsFuncArg.wacc
# Output:
# 1

begin
    struct sa is
        int s
        int b
    end

    int func(sa a) is
        return a.s
    end

    sa a = sa{1, 1};
    int b = call func(a);
    println b
end
