tests/extensions/structs/semanticErr/badConstructor2.wacc
# Line UndefinedIdentifierError
begin
    struct sa is
        int s
        int b
    end
    sa s = sa{1, pr}
end